k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inframind
  labels:
    name: inframind
    environment: production
