k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inframind-service
  namespace: inframind
  labels:
    app: inframind-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: inframind-app
